--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -518,6 +518,7 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.tabbed
   - pymdownx.superfences
+  - pymdownx.keys
   - toc:
       permalink: true
   - pymdownx.emoji:
