#53 add planned and previous webinar directories
Signed-off-by: David Radley <david_radley@uk.ibm.com>

--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -111,7 +111,8 @@ nav:
           - Running Samples: getting-started/tutorials/running-samples.md
           - Testing Tutorial: getting-started/tutorials/testing.md
       - Webinars:
-          - Previous Webinars: education/webinars/
+          - Previous Webinars: education/previous-webinars/
+          - Planned Webinars: education/planned-webinars/
   - Contributing:
       - Community Guide: guides/community.md
       - Project Operations: guides/project-operations.md
